pkg/crate/libzt/src/include/ZeroTierSockets.h

typedef uint8_t zts_sa_family_t;
/**
 * Address structure large enough to hold IPv4 and IPv6 addresses
 */
struct zts_sockaddr_storage {
    uint8_t s2_len;
    zts_sa_family_t ss_family;
    char s2_data1[2];
    uint32_t s2_data2[3];
    uint32_t s2_data3[3];
};
//----------------------------------------------------------------------------//
// Callback Structures                                                        //
//----------------------------------------------------------------------------//

/**
 * Runtime details about the current node
 */
typedef struct {
    /**
     * Node ID
     */
    uint64_t node_id;

    /**
     * Port used by ZeroTier to send and receive traffic
     */
    uint16_t port_primary;

    /**
     * Port used by ZeroTier to send and receive traffic
     */
    uint16_t port_secondary;

    /**
     * Port used by ZeroTier to send and receive traffic
     */
    uint16_t port_tertiary;

    /**
     * ZT Major version
     */
    uint8_t ver_major;

    /**
     * ZT Minor version
     */
    uint8_t ver_minor;

    /**
     * ZT Patch revision
     */
    uint8_t ver_rev;
} zts_node_info_t;
/**
 * Details about an assigned address that was added or removed
 */
typedef struct {
    uint64_t net_id;
    struct zts_sockaddr_storage addr;
} zts_addr_info_t;
/**
 * Virtual network status codes
 */
typedef enum {
    /**
     * Waiting for network configuration (also means revision == 0)
     */
    ZTS_NETWORK_STATUS_REQUESTING_CONFIGURATION = 0,

    /**
     * Configuration received and we are authorized
     */
    ZTS_NETWORK_STATUS_OK = 1,

    /**
     * Netconf master told us 'nope'
     */
    ZTS_NETWORK_STATUS_ACCESS_DENIED = 2,

    /**
     * Netconf master exists, but this virtual network does not
     */
    ZTS_NETWORK_STATUS_NOT_FOUND = 3,

    /**
     * Initialization of network failed or other internal error
     */
    ZTS_NETWORK_STATUS_PORT_ERROR = 4,

    /**
     * ZeroTier core version too old
     */
    ZTS_NETWORK_STATUS_CLIENT_TOO_OLD = 5
} zts_network_status_t;
/**
 * Virtual network type codes
 */
typedef enum {
    /**
     * Private networks are authorized via certificates of membership
     */
    ZTS_NETWORK_TYPE_PRIVATE = 0,

    /**
     * Public networks have no access control -- they'll always be AUTHORIZED
     */
    ZTS_NETWORK_TYPE_PUBLIC = 1
} zts_net_info_type_t;
/**
 * A route to be pushed on a virtual network
 */
typedef struct {
    /**
     * Target network / netmask bits (in port field) or NULL or 0.0.0.0/0
     * for default
     */
    struct zts_sockaddr_storage target;

    /**
     * Gateway IP address (port ignored) or NULL (family == 0) for LAN-local
     * (no gateway)
     */
    struct zts_sockaddr_storage via;

    /**
     * Route flags
     */
    uint16_t flags;

    /**
     * Route metric (not currently used)
     */
    uint16_t metric;
} zts_route_info_t;
/**
 * An Ethernet multicast group
 */
typedef struct {
    /**
     * MAC address (least significant 48 bits)
     */
    uint64_t mac;

    /**
     * Additional distinguishing information (usually zero)
     */
    unsigned long adi;
} zts_multicast_group_t;