pkg/crate/libzt/src/libzt.rs

#[test]
fn bindgen_test_layout_zts_sockaddr_storage() {
    assert_eq!(
        ::std::mem::size_of::<zts_sockaddr_storage>(),
        28usize,
        concat!("Size of: ", stringify!(zts_sockaddr_storage))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_sockaddr_storage>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_sockaddr_storage))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_sockaddr_storage>())).s2_len as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_sockaddr_storage),
            "::",
            stringify!(s2_len)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_sockaddr_storage>())).ss_family as *const _ as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_sockaddr_storage),
            "::",
            stringify!(ss_family)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_sockaddr_storage>())).s2_data1 as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_sockaddr_storage),
            "::",
            stringify!(s2_data1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_sockaddr_storage>())).s2_data2 as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_sockaddr_storage),
            "::",
            stringify!(s2_data2)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_sockaddr_storage>())).s2_data3 as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_sockaddr_storage),
            "::",
            stringify!(s2_data3)
        )
    );
}
#[doc = " Runtime details about the current node"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_node_info_t {
    #[doc = " Node ID"]
    pub node_id: u64,
    #[doc = " Port used by ZeroTier to send and receive traffic"]
    pub port_primary: u16,
    #[doc = " Port used by ZeroTier to send and receive traffic"]
    pub port_secondary: u16,
    #[doc = " Port used by ZeroTier to send and receive traffic"]
    pub port_tertiary: u16,
    #[doc = " ZT Major version"]
    pub ver_major: u8,
    #[doc = " ZT Minor version"]
    pub ver_minor: u8,
    #[doc = " ZT Patch revision"]
    pub ver_rev: u8,
}
#[test]
fn bindgen_test_layout_zts_node_info_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_node_info_t>(),
        24usize,
        concat!("Size of: ", stringify!(zts_node_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_node_info_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_node_info_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).node_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(node_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).port_primary as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(port_primary)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).port_secondary as *const _ as usize },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(port_secondary)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).port_tertiary as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(port_tertiary)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).ver_major as *const _ as usize },
        14usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(ver_major)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).ver_minor as *const _ as usize },
        15usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(ver_minor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_node_info_t>())).ver_rev as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_node_info_t),
            "::",
            stringify!(ver_rev)
        )
    );
}
#[doc = " Details about an assigned address that was added or removed"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_addr_info_t {
    pub net_id: u64,
    pub addr: zts_sockaddr_storage,
}
#[test]
fn bindgen_test_layout_zts_addr_info_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_addr_info_t>(),
        40usize,
        concat!("Size of: ", stringify!(zts_addr_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_addr_info_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_addr_info_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_addr_info_t>())).net_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_addr_info_t),
            "::",
            stringify!(net_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_addr_info_t>())).addr as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_addr_info_t),
            "::",
            stringify!(addr)
        )
    );
}
#[doc = " Waiting for network configuration (also means revision == 0)"]
pub const zts_network_status_t_ZTS_NETWORK_STATUS_REQUESTING_CONFIGURATION: zts_network_status_t =
    0;
#[doc = " Configuration received and we are authorized"]
pub const zts_network_status_t_ZTS_NETWORK_STATUS_OK: zts_network_status_t = 1;
#[doc = " Netconf master told us 'nope'"]
pub const zts_network_status_t_ZTS_NETWORK_STATUS_ACCESS_DENIED: zts_network_status_t = 2;
#[doc = " Netconf master exists, but this virtual network does not"]
pub const zts_network_status_t_ZTS_NETWORK_STATUS_NOT_FOUND: zts_network_status_t = 3;
#[doc = " Initialization of network failed or other internal error"]
pub const zts_network_status_t_ZTS_NETWORK_STATUS_PORT_ERROR: zts_network_status_t = 4;
#[doc = " ZeroTier core version too old"]
pub const zts_network_status_t_ZTS_NETWORK_STATUS_CLIENT_TOO_OLD: zts_network_status_t = 5;
#[doc = " Virtual network status codes"]
pub type zts_network_status_t = ::std::os::raw::c_uint;
#[doc = " Private networks are authorized via certificates of membership"]
pub const zts_net_info_type_t_ZTS_NETWORK_TYPE_PRIVATE: zts_net_info_type_t = 0;
#[doc = " Public networks have no access control -- they'll always be AUTHORIZED"]
pub const zts_net_info_type_t_ZTS_NETWORK_TYPE_PUBLIC: zts_net_info_type_t = 1;
#[doc = " Virtual network type codes"]
pub type zts_net_info_type_t = ::std::os::raw::c_uint;
#[doc = " A route to be pushed on a virtual network"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_route_info_t {
    #[doc = " Target network / netmask bits (in port field) or NULL or 0.0.0.0/0"]
    #[doc = " for default"]
    pub target: zts_sockaddr_storage,
    #[doc = " Gateway IP address (port ignored) or NULL (family == 0) for LAN-local"]
    #[doc = " (no gateway)"]
    pub via: zts_sockaddr_storage,
    #[doc = " Route flags"]
    pub flags: u16,
    #[doc = " Route metric (not currently used)"]
    pub metric: u16,
}
#[test]
fn bindgen_test_layout_zts_route_info_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_route_info_t>(),
        60usize,
        concat!("Size of: ", stringify!(zts_route_info_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_route_info_t>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_route_info_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_route_info_t>())).target as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_route_info_t),
            "::",
            stringify!(target)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_route_info_t>())).via as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_route_info_t),
            "::",
            stringify!(via)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_route_info_t>())).flags as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_route_info_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_route_info_t>())).metric as *const _ as usize },
        58usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_route_info_t),
            "::",
            stringify!(metric)
        )
    );
}
#[doc = " An Ethernet multicast group"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_multicast_group_t {
    #[doc = " MAC address (least significant 48 bits)"]
    pub mac: u64,
    #[doc = " Additional distinguishing information (usually zero)"]
    pub adi: ::std::os::raw::c_ulong,
}
#[test]
fn bindgen_test_layout_zts_multicast_group_t() {
    assert_eq!(
        ::std::mem::size_of::<zts_multicast_group_t>(),
        16usize,
        concat!("Size of: ", stringify!(zts_multicast_group_t))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_multicast_group_t>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_multicast_group_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_multicast_group_t>())).mac as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_multicast_group_t),
            "::",
            stringify!(mac)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_multicast_group_t>())).adi as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_multicast_group_t),
            "::",
            stringify!(adi)
        )
    );
}
